Bug 425286 - It is possible to D&D frames onto a locked layer
Summary: It is possible to D&D frames onto a locked layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 4.3.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-13 10:42 UTC by Dmitry Kazakov
Modified: 2020-09-02 22:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2020-08-13 10:42:23 UTC
SUMMARY
One cannot manipulate frames on a locked layer, that works perfectly fine. But if one **drops** frames from unlocked layer to a locked one, the operation succeeds.

STEPS TO REPRODUCE
1. Create two layers
2. Lock the lower one
3. Try to D&D frames from the unlocked one to the locked one

OBSERVED RESULT

Frames are added to the locked layer

EXPECTED RESULT

Locked portion of frames return to their original positions. Frames from the same selection that managed to land on unlocked layer are moved.
Comment 1 Ahab Greybeard 2020-08-13 18:35:09 UTC
I can confirm this for the Aug12 4.3.1 alpha (git dbf8a5d) appimage.
Comment 2 Eoin O'Neill 2020-09-02 20:46:38 UTC
Git commit 8ab41ecb1638394f8b730d93265b5fa592aa9142 by Eoin O'Neill.
Committed on 02/09/2020 at 20:44.
Pushed by eoinoneill into branch 'master'.

Frame Drag and Drop No Longer Accepted on Uneditable Layers

Locked layers and invisible layers cannot accept new keyframe content
when drag and dropping data, which is in line with the rest of the
timeline design.

M  +2    -0    plugins/dockers/animation/timeline_frames_model.cpp

https://invent.kde.org/graphics/krita/commit/8ab41ecb1638394f8b730d93265b5fa592aa9142
Comment 3 Eoin O'Neill 2020-09-02 22:32:39 UTC
Git commit 0de750e3ad19747f0c3583ed8976e84ff89196de by Eoin O'Neill.
Committed on 02/09/2020 at 22:22.
Pushed by eoinoneill into branch 'krita/4.3'.

Frame Drag and Drop No Longer Accepted on Uneditable Layers

Locked layers and invisible layers cannot accept new keyframe content
when drag and dropping data, which is in line with the rest of the
timeline design.
(cherry picked from commit 8ab41ecb1638394f8b730d93265b5fa592aa9142)

M  +2    -0    plugins/dockers/animation/timeline_frames_model.cpp

https://invent.kde.org/graphics/krita/commit/0de750e3ad19747f0c3583ed8976e84ff89196de