Frame Drag and Drop No Longer Accepted on Uneditable Layers

Locked layers and invisible layers cannot accept new keyframe content
when drag and dropping data, which is in line with the rest of the
timeline design.

BUG:425286
(cherry picked from commit 8ab41ecb1638394f8b730d93265b5fa592aa9142)